--- a/CSS/Es24 Titoli/index.css
+++ b/CSS/Es24 Titoli/index.css
@@ -1,6 +1,6 @@
 p.intro{
     text-align: center;
-    width:400px;
+    
     font-family: verdana,arial;
     font-size:12pt;
     font-style: oblique;
@@ -12,7 +12,7 @@ p.intro{
 }
 p.titolo{
     text-align: center;
-    width:400px;
+    
     font-family: verdana,arial;
     font-size:24pt;
     font-weight: bold;
@@ -25,7 +25,7 @@ p.titolo{
 }
 p.sottotitolo{
     text-align: center;
-    width:378px;
+   
     font-family: verdana,arial;
     font-size:18pt;
     font-weight: bold;
@@ -39,7 +39,7 @@ p.sottotitolo{
 }
 #quarta{
     text-align: center;
-    width:378px;
+    
     height: 100px;
     font-family: verdana,arial;
     font-size:18pt;
@@ -55,7 +55,7 @@ p.sottotitolo{
 #fondo{
     display: block;
     text-align:center;
-    width:200px;
+    
     height: 40px;
     font-family: verdana,arial;
     font-size:12pt;
@@ -76,4 +76,10 @@ p.sottotitolo{
     text-decoration:underline;
     background-color: #AAA;
     border-left-width:4px solid #565656 ;
+}
+#wrapper{
+    width:400px;
+    text-align:center;
+    margin:auto;
+    
 }
