--- a/HTML 5-CSS 3/Es38 nuovi input tag/index.css
+++ b/HTML 5-CSS 3/Es38 nuovi input tag/index.css
@@ -13,3 +13,8 @@ html,body,#wrapper{
     border-radius:10px;
     background-color: #FFA;
 }
+fieldset{
+    width:80%;
+    border:1px solid #000;
+    padding:15px;
+}
