--- a/JavaScript/Es16 styles/index.css
+++ b/JavaScript/Es16 styles/index.css
@@ -1,9 +1,10 @@
 #wrapper {
-  width: 780px;
+  width: 720px;
   border: 1px solid black;
   margin: 30px auto;
   padding: 30px;
   box-shadow: 10px 10px 15px 5px black;
+  background-color: white;
 }
 
 #wrapper div:nth-of-type(1){
@@ -18,6 +19,7 @@
     font-weight: bold;
     color: yellow;
     background-color: blue;
+    
 }
 #wrapper > * {
     margin: 10px;
